--- a/WebCovid19/Views/DonacionMonetaria/GraciasPorDonarMonetariamente.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/GraciasPorDonarMonetariamente.cshtml
@@ -11,5 +11,5 @@
 <center>
     <h1>Gracias por su donación monetaria</h1><br><br>
 
-    @Html.ActionLink("Volver al Home", "Home", "Usuario", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Volver al Home", "Index", "Usuario", null, new { @class = "btn btn-primary" })
 </center>
