--- a/WebCovid19/Views/Necesidades/AvisosNecesidad.cshtml
+++ b/WebCovid19/Views/Necesidades/AvisosNecesidad.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
-<h1>Hola</h1>
+<div>
+    <h2 class="text-lg-center">@ViewBag.Mensaje</h2>
+</div>
 
