--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
+<div class="text-center border border-light p-5">
     <h4>Agregar Insumos</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -33,11 +33,11 @@
     </div>
 
     <div class="btn-group">
-        <input type="submit" value="Insumos" class="offset-md-6 btn btn-primary" />
+        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
         <div class="col-2"></div>
         <input type="reset" value="Reiniciar" class="btn btn-primary" />
         <div class="col-2"></div>
-        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
+        <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
     </div>
 </div>
 }
