--- a/WebCovid19/Views/Necesidades/Monetaria.cshtml
+++ b/WebCovid19/Views/Necesidades/Monetaria.cshtml
@@ -7,19 +7,19 @@
 
 <h2>Monetaria</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Monetaria", "Necesidades", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
-    <h4>NecesidadesDonacionesMonetarias</h4>
+<div class="text-center border border-light p-5">
+    <h4>Agregar Necesidad Monetaria</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
         @Html.LabelFor(model => model.Dinero, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @type = "number", @min = "1", @step = "0.01", @value = "1", @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Dinero, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -33,11 +33,11 @@
     </div>
 
     <div class="btn-group">
-        <input type="submit" value="Crear" class="offset-md-6 btn btn-primary" />
+        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
         <div class="col-2"></div>
         <input type="reset" value="Reiniciar" class="btn btn-primary" />
         <div class="col-2"></div>
-        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
+        <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
     </div>
 </div>
 }
