--- a/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.DonacionesInsumos
+﻿@model List<Entidades.NecesidadesDonacionesInsumos>
 
 @{
     ViewBag.Title = "Donación de insumos";
@@ -23,23 +23,26 @@
                 <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError</div>
             } <br />
 
-            <center>
-                Aceite:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Producto solicitado</th>
+                        <th scope="col">Cantidad solicitada</th>
+                        <th scope="col">Cantidad restante</th>
 
-                Fideos:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
 
-                Lavandina:  @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { min = 0, max = 50000 } })
-                @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" }) <br />
-
-            </center>
-            <br />
-
-            <div class="col-md-12 btn-group mt-4">
-                @Html.ActionLink("Cancelar", "IndexLogueado", "Home", null, new { @class = "btn btn-primary" })
-                <button type="submit" class="btn btn-primary ml-2">Enviar</button>
-            </div>
+                        <tr>
+                            <th scope="col">@item.Nombre</th>
+                            <th scope="col">@item.Cantidad</th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         }
     </div>
 </div>
