Correccion Detalle Necesidad - Session
Agrego validacion en base a la session para mostrar ciertas secciones o no.
Agrego listado de insumos y de dinero en cada Detalle Necesidad

--- a/WebCovid19/Views/Necesidades/DetalleNecesidad.cshtml
+++ b/WebCovid19/Views/Necesidades/DetalleNecesidad.cshtml
@@ -1,17 +1,15 @@
-﻿@model Entidades.Views.VMPublicacion
+﻿@model Entidades.Necesidades
 @{
     ViewBag.Title = "DetalleNecesidad";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
     int idSession = int.Parse(Session["UserId"].ToString());
 }
 
-<h2>Detalle de la Necesidad</h2>
-
-@if (Model.necesidadesDonacionesInsumos.Necesidades != null)
+@if (Model.NecesidadesDonacionesInsumos.Count > 0)
 {
     @Html.Partial("~/Views/Shared/NecesidadDonacionInsumos.cshtml", Model)
 }
-else if (Model.necesidadesDonacionesMonetarias.Necesidades != null)
+else if (Model.NecesidadesDonacionesMonetarias.Count > 0)
 {
     @Html.Partial("~/Views/Shared/NecesidadDonacionMonetaria.cshtml", Model)
 }
