--- a/WebCovid19/Views/Denuncia/Denunciar.cshtml
+++ b/WebCovid19/Views/Denuncia/Denunciar.cshtml
@@ -43,7 +43,7 @@
             <div class="col-md-12 btn-group mt-4">
 
 
-                <button type="reset" class="btn btn-danger">Cancelar</button>
+                @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
                 <button type="submit" class="btn btn-primary ml-2">Enviar</button>
             </div>
         }
