--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,10 +1,10 @@
-﻿@{ 
+﻿@{
     string estadoCheckbox = (string)TempData["estadoCheckbox"];
 }
 
 <div class="container mb-5">
     <!-- Definición del menú -->
-    <nav class=" shadow-lg navbar navbar-expand-md  fixed-top position-fixed mb-5" id="colour" >
+    <nav class=" shadow-lg navbar navbar-expand-md  fixed-top position-fixed mb-5" id="colour">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#miNavbar"
                 aria-controls="miNavbar" aria-expanded="false" aria-label="Mostrar u ocultar menú">
             <i class="fa fa-align-justify" aria-hidden="true"></i>
@@ -79,24 +79,29 @@
                         </button>
 
                         <ul class="dropdown-menu " role="menu" id="colour">
-                            <li>
-                                <a href="" class="text-light">
-                                    <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
-                                    </svg>
 
-                                    @Html.ActionLink("Log in", "Login", "Usuario", null, new { @class = "hover", id = "link" })
+                            @if (Session["UserId"] as string == "")
+                            {
 
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" class="text-light">
-                                    <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
-                                    </svg>
-                                    @Html.ActionLink("Registrarme", "Registro", "Usuario", null, new { @class = "hover", id = "link" })
-                                </a>
-                            </li>
+                                <li>
+                                    <a href="" class="text-light">
+                                        <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
+                                        </svg>
+
+                                        @Html.ActionLink("Log in", "Login", "Usuario", null, new { @class = "hover", id = "link" })
+
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="text-light">
+                                        <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
+                                        </svg>
+                                        @Html.ActionLink("Registrarme", "Registro", "Usuario", null, new { @class = "hover", id = "link" })
+                                    </a>
+                                </li>
+                            }
                             <li>
                                 <a href="" class="text-light">
                                     <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -105,6 +110,9 @@
                                     @Html.ActionLink("Mi Perfil", "Perfil", "Usuario", null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
+                          
+                         @if(Session["Admin"] as string != "")
+                         {
                             <li>
                                 <a href="" class="text-light">
                                     <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -114,7 +122,7 @@
 
                                 </a>
                             </li>
-                            <li class="divider"></li>
+                         }   <li class="divider"></li>
                             @if (Session["UserId"] as string != "")
                             {
                                 <li>
