--- a/WebCovid19/Views/Usuario/Perfil.cshtml
+++ b/WebCovid19/Views/Usuario/Perfil.cshtml
@@ -137,7 +137,7 @@
                                 @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-md-12 btn-group mb-4">
-                                @Html.ActionLink("Cancelar", "IndexLogueado", "Usuario", null, new { @class = "btn btn-danger" })
+                                @Html.ActionLink("Regresar a Home", "Home", "Necesidades", null, new { @class = "btn btn-danger" })
                                 <button type="submit" class="btn btn-primary ml-2">Guardar datos</button>
                             </div>
                         </div>
