agrego scripts para validacion del lado del cliente

--- a/WebCovid19/Views/Shared/_BaseLayout.cshtml
+++ b/WebCovid19/Views/Shared/_BaseLayout.cshtml
@@ -19,6 +19,7 @@
     @System.Web.Optimization.Scripts.Render("~/bundles/Scripts/carrucel")
     @System.Web.Optimization.Scripts.Render("~/bundles/Scripts/js")
     @System.Web.Optimization.Scripts.Render("~/bundles/Scripts/umdJS")
+    @System.Web.Optimization.Scripts.Render("~/bundles/Scripts/ValidacionesCliente")
 </head>
 
 <body>
