--- a/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
+++ b/WebCovid19/Views/DonacionInsumos/DonacionInsumos.cshtml
@@ -34,7 +34,7 @@
 
             if (Mensaje == "Gracias por su donación") //Si mensaje es igual al mismo texto que puse en el controller (TempData["Mensaje"] = "Gracias por su donación") pongo el siguiente texto
             {
-                 <center><h2 class="p-3 mb-2 bg-danger text-white">¡Muchas gracias por su donación!</h2></center>   
+                 <center><h2 class="p-3 mb-2 bg-success"><i>¡Muchas gracias por su donación!</i></h2></center>   
             }
             
             <table class="table">
