--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -184,7 +184,7 @@
                     {
                         <div class="col-md-12 btn-group mt-4 mb-3">
                             @Html.ActionLink("En otro momento", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
-                            <a href="~/DonacionMonetaria/DonaMonetaria?idNecesidadDonacionMonetaria=@Model.IdNecesidad" class="btn btn-info ml-2">Donar Dinero</a>
+                            <a href="~/DonacionMonetaria/DonaMonetaria?idNecesidad=@Model.IdNecesidad" class="btn btn-info ml-2">Donar Dinero</a>
                         </div>
                     }
                 </div>
