Detalles en la vista Publicacion de la Necesidad
Agrego validación de mensajes al Usuario, en caso de que le Bloqueen su necesidad, o, cuando esté en revisión por haber sido denunciada.

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -12,19 +12,23 @@
         <div class="card" id="card">
             <div class="col-md-12">
                 <div class="float-right">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-outline-dark mt-3 float-right dropdown-toggle" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></button>
-                        <ul class="dropdown-menu hover " role="menu" id="colour">
-                            <li class="text-center ">
-                                <a href="" class="text-light">
-                                    <svg class="bi bi-exclamation-square-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm6 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
-                                    </svg>
-                                    @Html.ActionLink("Denunciar", "Denunciar", "Denuncia", new { id = necesidad.IdNecesidad }, new { @class = "hover text-light", value = necesidad.IdNecesidad })
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+
+                    @if (necesidad.IdUsuarioCreador != idSession)
+                    {
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-outline-dark mt-3 float-right dropdown-toggle" data-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></button>
+                            <ul class="dropdown-menu hover " role="menu" id="colour">
+                                <li class="text-center ">
+                                    <a href="" class="text-light">
+                                        <svg class="bi bi-exclamation-square-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm6 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
+                                        </svg>
+                                        @Html.ActionLink("Denunciar", "Denunciar", "Denuncia", new { id = necesidad.IdNecesidad }, new { @class = "hover text-light", value = necesidad.IdNecesidad })
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    }
                 </div>
 
                 <div class="row">
@@ -119,17 +123,28 @@
                         }
                     }
                     <label> No estoy de acuerdo </label>
-                    <div class="float-right">
-                        @if (necesidad.TipoDonacion == (int)Entidades.Enum.TipoDonacion.Monetaria)
-                        {
-                            <label> <b class="text-primary">Solicita Dinero</b> </label>
-                        }
-                        else
-                        {
-                            <label> <b class="text-primary">Solicita Insumos</b> </label>
-                        }
 
-                    </div>
+                    if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Finalizada && necesidad.IdUsuarioCreador == idSession)
+                    {
+                        <div class="float-right">
+                            <label> <b class="text-black-50">Necesidad Finalizada</b> </label>
+                        </div>
+                    }
+                    else if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Activa && necesidad.IdUsuarioCreador == idSession)
+                    {
+
+                        <div class="float-right">
+                            @if (necesidad.TipoDonacion == (int)Entidades.Enum.TipoDonacion.Monetaria)
+                            {
+                                <label> <b class="text-primary">Solicita Dinero</b> </label>
+                            }
+                            else
+                            {
+                                <label> <b class="text-primary">Solicita Insumos</b> </label>
+                            }
+
+                        </div>
+                    }
                 }
 
 
@@ -137,22 +152,37 @@
                 <p class="card-text mt-3">
                     @necesidad.Descripcion
                 </p>
+                @if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada && necesidad.IdUsuarioCreador == idSession)
+                {
+
+                    <div class="p-3 mb-2 bg-danger text-white text-center">Esta Necesidad ha sido bloqueada por nuestros administradores por incumplimiento de nuestras reglas.</div>
+                }
+                else if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && necesidad.IdUsuarioCreador == idSession)
+                {
+
+                    <div class="p-3 mb-2 bg-warning text-white text-center">Esta Necesidad está en revision de ser pública.</div>
+
+                }
 
                 <p class="card-text text-secondary"><b>Fecha de finalizacion:</b> <span class="fa fa-calendar"></span> @necesidad.FechaFin</p>
-                <div class="text-center">
-                    @if (necesidad.IdUsuarioCreador == idSession)
-                    {
+                @if (necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada | necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && necesidad.IdUsuarioCreador == idSession)
+                {
+
+            <div class="text-center">
+                @if (necesidad.IdUsuarioCreador == idSession)
+                {
+                   
                         @Html.ActionLink("Editar", "", "", null, new { @class = "btn btn-primary" })
+                    
 
-                        <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
-                    }
-                    else
-                    {
-                        <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
-                    }
-
-
-                </div>
+                    <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
+                }
+                else
+                {
+                    <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
+                }
+            </div>
+                }
             </div>
         </div>
     </div>
