Correccion en vista Publicacion de la Necesidad
Le saco una condición a las validaciones para evitar fallos.

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -124,13 +124,13 @@
                     }
                     <label> No estoy de acuerdo </label>
 
-                    if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Finalizada && necesidad.IdUsuarioCreador == idSession)
+                    if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Finalizada )
                     {
                         <div class="float-right">
                             <label> <b class="text-black-50">Necesidad Finalizada</b> </label>
                         </div>
                     }
-                    else if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Activa && necesidad.IdUsuarioCreador == idSession)
+                    else if (necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Activa)
                     {
 
                         <div class="float-right">
@@ -165,7 +165,7 @@
                 }
 
                 <p class="card-text text-secondary"><b>Fecha de finalizacion:</b> <span class="fa fa-calendar"></span> @necesidad.FechaFin</p>
-                @if (necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada | necesidad.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && necesidad.IdUsuarioCreador == idSession)
+                @if (necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada | necesidad.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Revision)
                 {
 
             <div class="text-center">
