--- a/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
@@ -80,10 +80,14 @@
                         <div class="col-md-12 btn-group mt-4 mb-3">
                             @if (Model.IdUsuarioCreador == idSession)
                             {
-                                <div class="col-md-12 btn-group mt-4 mb-3">
-                                    @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
-                                    <button type="button" class="btn btn-info ml-2">Editar</button>
-                                </div>
+                            <div class="col-md-12 btn-group mt-4 mb-3">
+                                @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
+
+                                @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada)
+                                {
+                                <button type="button" class="btn btn-info ml-2">Editar</button>
+                                }
+                            </div>
 
                             }
                             else
@@ -93,6 +97,18 @@
                             }
 
                         </div>
+
+                        @if (Model.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada && Model.IdUsuarioCreador == idSession)
+                        {
+
+                            <div class="p-3 mb-2 bg-danger text-white text-center">Esta Necesidad ha sido bloqueada por nuestros administradores por incumplimiento de nuestras reglas.</div>
+                        }
+                        else if (Model.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && Model.IdUsuarioCreador == idSession)
+                        {
+
+                            <div class="p-3 mb-2 bg-warning text-white text-center">Esta Necesidad está en revision de ser pública.</div>
+
+                        }
 
                     </div>
                 </div>
