--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -177,7 +177,10 @@
                     {
                         <div class="col-md-12 btn-group mt-4 mb-3">
                             @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
-                            <button type="button" class="btn btn-info ml-2">Editar</button>
+                            @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada)
+                            {
+                                <button type="button" class="btn btn-info ml-2">Editar</button>
+                            }
                         </div>
                     }
                     else
@@ -188,7 +191,17 @@
                         </div>
                     }
                 </div>
+            @if (Model.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada && Model.IdUsuarioCreador == idSession)
+                {
 
+                    <div class="p-3 mb-2 bg-danger text-white text-center">Esta Necesidad ha sido bloqueada por nuestros administradores por incumplimiento de nuestras reglas.</div>
+                }
+                else if (Model.Estado == (int)Entidades.Enum.TipoEstadoNecesidad.Revision && Model.IdUsuarioCreador == idSession)
+                {
+
+                    <div class="p-3 mb-2 bg-warning text-white text-center">Esta Necesidad está en revision de ser pública.</div>
+
+                }
             </div>
 
         </div>
